# rust_raft

./: .gitignore  Cargo.toml  README.md  TODO  build.rs
schema/: append_entries.capnp  raft.capnp
src/: client.rs  lib.rs  main.rs  raft.rs  raft_client.rs  raft_codec.rs  raft_proto.rs  raft_server.rs  server.rs
