[package]
name = "tokio-raft"
version = "0.1.0"
authors = ["Ryan Thomas <ryan@ryant.org>"]

[lib]
name = "raft"
path = "src/lib.rs"

[[bin]]
name = "main"
src = "src/main.rs"

[dependencies]
bytes = "0.4"
capnp = "*"
futures = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

[build-dependencies]
capnpc = "*"