[package]
name = "rust-raft"
version = "0.1.0"
authors = ["Ryan Thomas <ryan@ryant.org>"]
build = "build.rs"

[lib]
name = "raft"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[build-dependencies]
capnpc = "*"

[dependencies]
capnp = "*"
capnp-rpc = "*"
futures = "*"
tokio-core = "*"
tokio-io = "*"